2012-06-01  Yair K. <cesium2@gmail.com>

	* interface/xskin_spectrum.c: [PATCH 1/9] Fix possible invalid
	  access below the array range

2012-05-29  Yair K. <cesium2@gmail.com>

	* doc/C/README.xaw, interface/TiMidity-uj.ad,
	  interface/TiMidity.ad, interface/xaw_c.c, interface/xaw_i.c,
	  interface/xaw_p.h: Make the interface apply the previous
	  volume.  It also fixes some minor display issues (remove the
	  checkmark next to hidetrace menu item when initing the trace
	  the first time after starting with '-ia' and 'Disp:Trace'
	  set to 0, don't allow activing the play button when no files
	  are loaded).
	* interface/x_trace.c, interface/x_trace.h, interface/xaw_i.c,
	  interface/xdnd.c: Fix some off by ones (one prevented the
	  channel number being displayed when muting it [right-click
	  in trace mode], another in xdnd.c led to a gcc warning with
	  -Wall), and free a bit more memory (less valgrind warnings).
	* timidity/miditrace.c: Revert fix soundspec in trace mode

2012-05-26  Hans de Goede <hdegoede@redhat.com>

	* configure.in: configure: Fix building of dynamic user
	  interfaces
	* timidity/mac_main.c, timidity/timidity.c: Add a trysource
	  config file directive
	  Add a "trysource" config file directive, which allows to try
	  and source other config files, while continuing without
	  error if the specified file is missing.
	  Also cleanup the user config loading code using this new
	  functionality.
	* interface/x_trace.c, interface/xaw_c.c: xaw-interface: Fix
	  crash when MAX_CHANNELS > 32 (by Yair K.)
	* configure.in, doc/C/README.xaw, interface/Makefile.am,
	  interface/TiMidity-uj.ad, interface/TiMidity.ad,
	  interface/x_trace.c, interface/x_trace.h, interface/xaw.h,
	  interface/xaw_c.c, interface/xaw_i.c, interface/xaw_p.h,
	  interface/xdnd.h: xaw interface update (by Yair K.)
	* timidity/timidity.h: Improve timidity default settings
	  (by Yair K.)
	* configure.in: configure: Fix building with X11 based